<?xml version="1.0" encoding="UTF-8"?>

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">  
    <modelVersion>4.0.0</modelVersion>  
    <parent> 
        <groupId>org.springframework.boot</groupId>  
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.4.3</version>
        <relativePath/> 
    </parent>  
    <groupId>com.github.mengweijin</groupId>  
    <artifactId>vita-parent</artifactId>
    <version>${revision}</version>
    <packaging>pom</packaging>
    <name>vita-parent</name>
    <description>vita-parent</description>
    <url>https://gitee.com/mengweijin/vita</url>
    <modules> 
        <module>vita-admin</module>
        <module>vita-framework</module>
        <module>vita-generator</module>
    </modules>
    <properties>
        <!-- 全局版本控制，如果要修改版本号，修改此处即可-->
        <revision>2.0.0-SNAPSHOT</revision>
        <gpg.skip>false</gpg.skip>
        <skipNexusStagingDeployMojo>false</skipNexusStagingDeployMojo>
        <skipTests>true</skipTests>
        <java.version>17</java.version>  
        <maven.compiler.source>${java.version}</maven.compiler.source>  
        <maven.compiler.target>${java.version}</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>  
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <mybatis-plus.version>3.5.11</mybatis-plus.version>
        <logback-classic-db.version>1.2.11.1</logback-classic-db.version>
        <hutool.version>6.0.0-M20</hutool.version>
        <sa-token.version>1.41.0</sa-token.version>
        <oshi.version>6.8.0</oshi.version>
        <zxing.version>3.5.3</zxing.version>
        <fastexcel.version>1.1.0</fastexcel.version>
        <ip2region.version>2.7.0</ip2region.version>
        <p6spy-spring-boot-starter.version>1.10.0</p6spy-spring-boot-starter.version>
        <knife4j.version>4.5.0</knife4j.version>
    </properties>
    <profiles>
        <profile>
            <id>local</id>
            <properties>
                <!-- 环境标识，需要与配置文件的名称相对应 -->
                <profiles.active>local</profiles.active>
                <logging.level>debug</logging.level>
            </properties>
        </profile>
        <profile>
            <id>dev</id>
            <properties>
                <!-- 环境标识，需要与配置文件的名称相对应 -->
                <profiles.active>dev</profiles.active>
                <logging.level>debug</logging.level>
            </properties>
            <activation>
                <!-- 默认环境 -->
                <activeByDefault>true</activeByDefault>
            </activation>
        </profile>
        <profile>
            <id>h2</id>
            <properties>
                <!-- 环境标识，需要与配置文件的名称相对应 -->
                <profiles.active>h2</profiles.active>
                <logging.level>debug</logging.level>
            </properties>
        </profile>
        <profile>
            <id>postgresql</id>
            <properties>
                <!-- 环境标识，需要与配置文件的名称相对应 -->
                <profiles.active>postgresql</profiles.active>
                <logging.level>debug</logging.level>
            </properties>
        </profile>
        <profile>
            <id>mysql</id>
            <properties>
                <!-- 环境标识，需要与配置文件的名称相对应 -->
                <profiles.active>mysql</profiles.active>
                <logging.level>debug</logging.level>
            </properties>
        </profile>
        <profile>
            <id>oracle</id>
            <properties>
                <!-- 环境标识，需要与配置文件的名称相对应 -->
                <profiles.active>oracle</profiles.active>
                <logging.level>debug</logging.level>
            </properties>
        </profile>
        <profile> 
            <id>prod</id>  
            <properties> 
                <profiles.active>prod</profiles.active>  
                <logging.level>info</logging.level>
            </properties> 
        </profile> 
    </profiles>  
    <dependencyManagement> 
        <dependencies>
            <dependency>
                <groupId>com.baomidou</groupId>
                <artifactId>mybatis-plus-spring-boot3-starter</artifactId>
                <version>${mybatis-plus.version}</version>
            </dependency>
            <dependency>
                <groupId>com.baomidou</groupId>
                <artifactId>mybatis-plus-jsqlparser</artifactId>
                <version>${mybatis-plus.version}</version>
            </dependency>
            <dependency> 
                <groupId>com.github.gavlyukovskiy</groupId>  
                <artifactId>p6spy-spring-boot-starter</artifactId>  
                <version>${p6spy-spring-boot-starter.version}</version> 
            </dependency>  
            <dependency> 
                <groupId>cn.dev33</groupId>  
                <artifactId>sa-token-spring-boot3-starter</artifactId>  
                <version>${sa-token.version}</version> 
            </dependency>
            <dependency>
                <groupId>ch.qos.logback.db</groupId>
                <artifactId>logback-classic-db</artifactId>
                <version>${logback-classic-db.version}</version>
            </dependency>
            <dependency> 
                <groupId>org.dromara.hutool</groupId>  
                <artifactId>hutool-all</artifactId>  
                <version>${hutool.version}</version> 
            </dependency>
            <dependency> 
                <groupId>com.github.oshi</groupId>  
                <artifactId>oshi-core</artifactId>  
                <version>${oshi.version}</version> 
            </dependency>  
            <dependency> 
                <groupId>com.google.zxing</groupId>  
                <artifactId>core</artifactId>  
                <version>${zxing.version}</version> 
            </dependency>
            <dependency> 
                <groupId>org.lionsoul</groupId>  
                <artifactId>ip2region</artifactId>  
                <version>${ip2region.version}</version> 
            </dependency>
            <dependency>
                <groupId>cn.idev.excel</groupId>
                <artifactId>fastexcel</artifactId>
                <version>${fastexcel.version}</version>
            </dependency>
            <dependency> 
                <groupId>com.github.xiaoymin</groupId>  
                <artifactId>knife4j-openapi3-jakarta-spring-boot-starter</artifactId>  
                <version>${knife4j.version}</version> 
            </dependency>
        </dependencies> 
    </dependencyManagement>  
    <!-- 开源许可证 -->  
    <licenses> 
        <license> 
            <name>The Apache Software License, Version 2.0</name>  
            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url> 
        </license> 
    </licenses>  
    <!-- 开发者信息 -->  
    <developers> 
        <developer> 
            <name>Meng Wei Jin</name>  
            <email>mwjwork@qq.com</email>
        </developer> 
    </developers>  
    <!--开源地址-->  
    <scm> 
        <url>https://gitee.com/mengweijin/vita</url>
    </scm>  
    <!--  Issue地址  -->  
    <issueManagement> 
        <system>Gitee Issue</system>  
        <url>https://gitee.com/mengweijin/vita/issues</url>
    </issueManagement>  
    <build> 
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
            </plugin>
            <!-- Source -->  
            <plugin> 
                <groupId>org.apache.maven.plugins</groupId>  
                <artifactId>maven-source-plugin</artifactId>  
                <version>3.2.1</version>  
                <executions> 
                    <execution> 
                        <phase>package</phase>  
                        <goals> 
                            <goal>jar-no-fork</goal> 
                        </goals> 
                    </execution> 
                </executions> 
            </plugin>  
            <!-- Javadoc -->  
            <plugin> 
                <groupId>org.apache.maven.plugins</groupId>  
                <artifactId>maven-javadoc-plugin</artifactId>  
                <version>3.5.0</version>  
                <configuration> 
                    <doclint>none</doclint>  
                    <charset>UTF-8</charset>  
                    <docencoding>UTF-8</docencoding>  
                    <!--                    <additionalOptions>-->  
                    <!--                        &lt;!&ndash;由于JDK8的java doc生成机制比之前的要严谨许多,导致项目用maven打包的时候出错 解决办法: 添加-Xdoclint:none配置&ndash;&gt;-->  
                    <!--                        <additionalOption>-Xdoclint:none</additionalOption>-->  
                    <!--                    </additionalOptions>--> 
                </configuration>  
                <executions> 
                    <execution> 
                        <phase>package</phase>  
                        <goals> 
                            <goal>jar</goal> 
                        </goals> 
                    </execution> 
                </executions> 
            </plugin>  
            <!-- GPG -->  
            <plugin> 
                <groupId>org.apache.maven.plugins</groupId>  
                <artifactId>maven-gpg-plugin</artifactId>  
                <version>1.6</version>  
                <executions> 
                    <execution> 
                        <phase>verify</phase>  
                        <goals> 
                            <goal>sign</goal> 
                        </goals> 
                    </execution> 
                </executions> 
            </plugin>  
            <plugin> 
                <groupId>org.sonatype.plugins</groupId>  
                <artifactId>nexus-staging-maven-plugin</artifactId>  
                <version>1.6.8</version>  
                <extensions>true</extensions>  
                <configuration> 
                    <serverId>oss</serverId>  
                    <nexusUrl>https://oss.sonatype.org/</nexusUrl>  
                    <autoReleaseAfterClose>true</autoReleaseAfterClose> 
                </configuration> 
            </plugin>
        </plugins> 
    </build>  
    <!--  提交到资料库的地址  -->  
    <distributionManagement> 
        <snapshotRepository> 
            <id>oss</id>  
            <url>https://oss.sonatype.org/content/repositories/snapshots/</url> 
        </snapshotRepository>  
        <repository> 
            <id>oss</id>  
            <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url> 
        </repository> 
    </distributionManagement>  
    <repositories> 
        <repository> 
            <id>huawei</id>  
            <url>https://mirrors.huaweicloud.com/repository/maven/</url> 
        </repository> 
    </repositories>  
    <pluginRepositories> 
        <pluginRepository> 
            <id>huawei</id>  
            <url>https://mirrors.huaweicloud.com/repository/maven/</url> 
        </pluginRepository> 
    </pluginRepositories> 
</project>
